--- a/Day5/RequestTrackerApplication/RequestTrackerApplication.csproj
+++ b/Day5/RequestTrackerApplication/RequestTrackerApplication.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\RequestTrackerModelLibrary\RequestTrackerModelLibrary.csproj" />
+    </ItemGroup>
+
 </Project>
