--- a/Day8/RequestTrackerApplication/RequestTrackerApplication.csproj
+++ b/Day8/RequestTrackerApplication/RequestTrackerApplication.csproj
@@ -11,4 +11,8 @@
         <ProjectReference Include="..\RequestTrackerModelLibrary\RequestTrackerModelLibrary.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Exceptions\" />
+    </ItemGroup>
+
 </Project>
