--- a/Day10/DoctorsAppointmentManagerSolution/DoctorsAppointmentManager.csproj
+++ b/Day10/DoctorsAppointmentManagerSolution/DoctorsAppointmentManager.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\RequestTrackerModelLibrary\RequestTrackerModelLibrary.csproj"/>
+        <ProjectReference Include="DoctorsAppointmentLibrary\DoctorsAppointmentLibrary.csproj"/>
     </ItemGroup>
 
 </Project>
