--- a/Day10/DoctorsAppointmentManagerSolution/DoctorsAppointmentManager.csproj
+++ b/Day10/DoctorsAppointmentManagerSolution/DoctorsAppointmentManager.csproj
@@ -11,4 +11,11 @@
         <ProjectReference Include="DoctorsAppointmentLibrary\DoctorsAppointmentLibrary.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="controllers\" />
+      <Folder Include="Exceptions\" />
+      <Folder Include="Repository\" />
+      <Folder Include="services\" />
+    </ItemGroup>
+
 </Project>
