--- a/Day22/RequestTrackerSolution/RequestTrackerFEAPP/RequestTrackerFEAPP.csproj
+++ b/Day22/RequestTrackerSolution/RequestTrackerFEAPP/RequestTrackerFEAPP.csproj
@@ -1,18 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RequestTrackerBLLibrary\RequestTrackerBLLibrary.csproj" />
     <ProjectReference Include="..\RequestTrackerDALLibrary\RequestTrackerDALLibrary.csproj" />
-    <ProjectReference Include="..\RequestTrackerModelLibrary\RequestTrackerModelLibrary.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.18">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
