--- a/Day22/AwesomeRequestTracker/AwesomeRequestTracker.csproj
+++ b/Day22/AwesomeRequestTracker/AwesomeRequestTracker.csproj
@@ -7,4 +7,17 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Serivces\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.18" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.18" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.18">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
