--- a/Day24/DoctorsAppointmentManager/appsettings.json
+++ b/Day24/DoctorsAppointmentManager/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "defaultConnection": "Data source=B4RBBX3\\SQLEXPRESS;Integrated Security=true;TrustServerCertificate=True;Initial catalog=DoctorDB"
+  },
   "AllowedHosts": "*"
 }
