--- a/Day25 Pizza, Auth, DTO, Region/AwesomePizzas/AwesomePizzas.csproj
+++ b/Day25 Pizza, Auth, DTO, Region/AwesomePizzas/AwesomePizzas.csproj
@@ -7,15 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.19">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Contexts\" />
-    <Folder Include="Exceptions\" />
-    <Folder Include="Models\" />
-    <Folder Include="Repos\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
