--- a/Day25 Pizza, Auth, DTO, Region/AwesomePizzas/appsettings.json
+++ b/Day25 Pizza, Auth, DTO, Region/AwesomePizzas/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "defaultConnection": "Data source=B4RBBX3\\\\SQLEXPRESS;Integrated Security=true;TrustServerCertificate=True;Initial catalog=AwesomeDB25"
+  },
   "AllowedHosts": "*"
 }
