--- a/Day26 JWT/AwesomePizzas/appsettings.json
+++ b/Day26 JWT/AwesomePizzas/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "defaultConnection": "Data source=B4RBBX3\\SQLEXPRESS;Integrated Security=true;TrustServerCertificate=True;Initial catalog=AwesomeDB25"
   },
+  "TokenKey": {
+    "JWT": "This is the dummy key which has to be a bit long for the 512. which should be even more longer for the passing"
+  },
   "AllowedHosts": "*"
 }
