--- a/Day27 Authorization/AwesomeRequestTracker/appsettings.json
+++ b/Day27 Authorization/AwesomeRequestTracker/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "defaultConnection": "Data Source=B4RBBX3\\SQLEXPRESS;Integrated Security=true;TrustServerCertificate=True;Initial Catalog=AwesomeDB27;"
+    "defaultConnection": "Data Source=B4RBBX3\\SQLEXPRESS;Integrated Security=true;TrustServerCertificate=True;Initial Catalog=AwesomeDB;"
   },
   "AllowedHosts": "*"
 }
