--- a/Day27 Authorization/AwesomeRequestTracker/appsettings.json
+++ b/Day27 Authorization/AwesomeRequestTracker/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "defaultConnection": "Data Source=B4RBBX3\\SQLEXPRESS;Integrated Security=true;TrustServerCertificate=True;Initial Catalog=AwesomeDB;"
+    "defaultConnection": "Data Source=B4RBBX3\\SQLEXPRESS;Integrated Security=true;TrustServerCertificate=True;Initial Catalog=AwesomeDB27;"
+  },
+  "TokenKey": {
+    "JWT": "This is the dummy key which has to be a bit long for the 512. which should be even more longer for the passing"
   },
   "AllowedHosts": "*"
 }
