init: learning + dotnet app with connection from sqlserver container

--- a/4_7_2024/WebApiDockerService/WebApiDockerService/appsettings.json
+++ b/4_7_2024/WebApiDockerService/WebApiDockerService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "defaultConnection": "Server=localhost;Database=Matrimony;User Id=sa;Password=Sugan@123;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
