init: today task ques

--- a/5_7_2024/weapi/TestWebApi/appsettings.json
+++ b/5_7_2024/weapi/TestWebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "defaultConnection": "Server=localhost,1500;Database=Shop;User Id=sa;Password=Sugan123;TrustServerCertificate=True;",
+    "defaultConnection": "Server=localhost,1500;Database=Shop;User Id=sa;Password=Sugan123;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
